--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vue": "^3.3.2"
     },
     "dependencies": {
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^1.0.6"
     }
 }
